@@ -30,6 +30,8 @@ This is a minor bug fix and maintenance release:
 - New 'viewpos' command to display client's position and angles (based
   on FitzQuake version.)
 
+- Utils, windows:  Change threads creation to use _beginthreadex().
+
 - Other minor fixes, tidy-ups, and protability tweaks.
 
 
